<resources>
    <string name="app_name">add user</string>
    <string name="name">Name</string>
    <string name="work">UI/UX designer</string>
    <string name="buttonProfile">Back</string>
    <string name="email">email@gmail.com</string>
    <string name="age">22</string>
    <string name="note">hello</string>
    <string name="existing_user">Existing User</string>
    <string name="add">Add</string>
    <string name="Note">Note</string>
    <string name="Age">Age</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="ok">ok</string>
    <string name="email2">Email:</string>
    <string name="name2">Name:</string>
    <string name="age2">Age:</string>
    <string name="note2">Note:</string>
    <string name="edit2">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_data">Update data</string>
</resources>