<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/green_100"
tools:context=".EditActivity">

<LinearLayout
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_medium_plus"
    android:background="@drawable/profile"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height"
                android:layout_gravity="center"
                android:src="@drawable/girl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </de.hdodenhof.circleimageview.CircleImageView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/width_small"
                android:layout_height="@dimen/height_small"
                android:layout_marginStart="@dimen/extra_large"
                android:layout_marginTop="@dimen/margin_max_large"
                android:src="@drawable/ic_green_circle_svgrepo_com"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/name"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_large_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/work"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/black"
                android:text="@string/work"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/text_large_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_130"
                android:backgroundTint="@color/pink_A400"
                android:gravity="center"
                android:text="@string/buttonProfile"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small_plus" />

        </LinearLayout>
</LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/profile"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="42dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_medium_plus"
                android:layout_marginTop="@dimen/margin_small"
                android:src="@drawable/ic_profile" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/adamina"
                android:gravity="left"
                android:layout_marginStart="@dimen/margin_extra_large"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_plus"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/profile"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="@dimen/margin_medium_plus"
                android:layout_gravity="center"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_plus"
                android:gravity="left"
                android:layout_marginStart="@dimen/margin_extra_large"
                android:layout_gravity="center"
                android:fontFamily="@font/adamina"
                android:text="@string/email"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/profile"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="@dimen/margin_medium_plus"
                android:layout_gravity="center"
                android:src="@drawable/ic_age"  />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginStart="@dimen/margin_extra_large"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_plus"
                android:layout_gravity="center"
                android:fontFamily="@font/adamina"
                android:text="@string/age"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@drawable/profile"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginStart="@dimen/margin_medium_plus"
                android:layout_gravity="center"
                android:src="@drawable/ic_note" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginStart="@dimen/margin_extra_large"
                android:textColor="@color/black"
                android:textSize="@dimen/text_large_plus"
                android:layout_gravity="center"
                android:fontFamily="@font/adamina"
                android:text="@string/note"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>